--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+td {
+	padding: 0px 20px 0px 20px;
+}
