--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -1,14 +1,14 @@
 <h1>Main Page</h1>
-@if (table_rows) {
-	<h3>{{table_name}} table</h3>
+@if (tableRows) {
+	<h3>{{tableName}} table</h3>
 	<table>
 		<thead>
-			<th *ngFor="let header of table_headers">{{header}}</th>
+			<th *ngFor="let header of tableHeaders">{{header}}</th>
 		</thead>
 		<tbody>
-			<tr *ngFor="let row of table_rows">
-				<a routerLink="{{row[table_pkey]}}" target=""><td>{{row[table_pkey]}}</td></a>
-				<td *ngFor="let col of table_headers">{{row[col]}}</td>
+			<tr *ngFor="let row of tableRows">
+				<a routerLink="{{row[tablePKey]}}" target=""><td>{{row[tablePKey]}}</td></a>
+				<td *ngFor="let col of tableHeaders">{{row[col]}}</td>
 			</tr>
 		</tbody>
 	</table>
