--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -8,7 +8,7 @@
 		<tbody>
 			<tr *ngFor="let row of tableRows">
 				<a routerLink="{{row[tablePKey]}}" target=""><td>{{row[tablePKey]}}</td></a>
-				<td *ngFor="let col of tableHeaders">{{row[col]}}</td>
+				<td *ngFor="let col of tableHeaders.slice(1)">{{row[col]}}</td>
 			</tr>
 		</tbody>
 	</table>
