--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,7 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+a:visited {
+	color: blue;
+}
 div:has(> table){
 	overflow: auto;
 	white-space: nowrap;
@@ -14,8 +15,3 @@ input {
 	width:8em;
 	text-align: center;
 }
-button[mat-button] {
-	font-size: 1em;
-	margin-top: 15px;
-}
-
