Wip, added cancel, update, delete buttons to details page. Cancel works, working on delete button. Trying to figure out how to validate user input in modal.

--- a/frontend/src/app/details/details.component.scss
+++ b/frontend/src/app/details/details.component.scss
@@ -1,8 +1,11 @@
 button[mat-button] {
-	font-size: 1.2em;
-	margin-top: 15px;
 	margin-right: 0.8em;
 }
+
+button[mat-button].del-btn {
+	color: red;
+}
+
 footer {
 	display: flex;
 	flex-wrap: wrap;
