--- a/frontend/src/app/details/details.component.html
+++ b/frontend/src/app/details/details.component.html
@@ -20,7 +20,7 @@
 	</table>
 </div>
 <footer>
-	<button mat-button>Cancel</button>
+	<button mat-button routerLink="/">Cancel</button>
 	<button mat-button>Update</button>
-	<button mat-button>Delete</button>
+	<button mat-button class="del-btn" (click)="onDelete()">Delete</button>
 </footer>
