--- a/frontend/src/app/details/details.component.html
+++ b/frontend/src/app/details/details.component.html
@@ -13,7 +13,11 @@
 							{{record[col]}}
 						</ng-template>
 						<ng-template #not_pkey>
-							<input type='text' [(ngModel)]="record[col]" name={{col}} [maxLength]="getColMaxLength(col)" [required]="isRequired(col)">
+							<input type='text' [(ngModel)]="record[col]" name={{col}} 
+								[minlength]="getColMinLength(col)" 
+								[maxlength]="getColMaxLength(col)" 
+								[required]="isRequired(col)"
+								[pattern]="getPattern(col)">
 						</ng-template>
 					</td>
 				</tr>
@@ -22,7 +26,7 @@
 	</div>
 	<footer>
 		<button mat-button routerLink="/">Cancel</button>
-		<button mat-button (click)="onUpdate()">Update</button>
+		<button mat-button (click)="onUpdate()" [disabled]="!detailsForm.valid">Update</button>
 		<button mat-button class="del-btn" (click)="onDelete()">Delete</button>
 	</footer>
 </form>
