--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -12,5 +12,5 @@
 			</tr>
 		</tbody>
 	</table>
-	<button mat-raised-button>Insert</button>
+	<button mat-raised-button routerLink="insert">Insert</button>
 }
