Added functionality for inserting records. Still need to check if primary key already exists, maybe have generic error that appears if query could not be completed(status 500)? Also need error messages on inputs. Want to find a better way to share the html between details and insert components. Also want to add auto formatting for au_id, phone. Also want to make contract field a select instead of text input since there is only two options.

--- a/frontend/src/app/insert/insert.component.html
+++ b/frontend/src/app/insert/insert.component.html
@@ -12,14 +12,15 @@
 							[minlength]="validators.getColMinLength(col)"
 							[maxlength]="validators.getColMaxLength(col)"
 							[required]="validators.isRequired(col)"
-							[pattern]="validators.getPattern(col)">
+							[pattern]="validators.getPattern(col)"
+							[placeholder]="placeholders[col]">
 					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
-	<footer>
+	<div class="button-container">
 		<button mat-button routerLink="">Cancel</button>
 		<button mat-button (click)="onInsert()" [disabled]="!insertForm.valid">Insert</button>
-	</footer>
+	</div>
 </form>
