--- a/frontend/src/app/details/details.component.html
+++ b/frontend/src/app/details/details.component.html
@@ -24,9 +24,9 @@
 			</tbody>
 		</table>
 	</div>
-	<footer>
+	<div class="button-container">
 		<button mat-button routerLink="">Cancel</button>
 		<button mat-button (click)="onUpdate()" [disabled]="!detailsForm.valid">Update</button>
 		<button mat-button class="del-btn" (click)="onDelete()">Delete</button>
-	</footer>
+	</div>
 </form>
