--- a/frontend/src/app/insert/insert.component.html
+++ b/frontend/src/app/insert/insert.component.html
@@ -8,16 +8,29 @@
 			<tbody>
 				<tr>
 					<td *ngFor="let col of tableHeaders">
-						<input type='text' [(ngModel)]="record[col]" name={{col}}
+						<ng-container *ngIf="col === tablePKey then is_pkey else not_pkey"></ng-container>
+						<ng-template #is_pkey>
+							<input type='text' [(ngModel)]="record[col]" name={{col}}
+							[minlength]="validators.getColMinLength(col)"
+							[maxlength]="validators.getColMaxLength(col)"
+							[required]="validators.isRequired(col)"
+							[pattern]="validators.getPattern(col)"
+							[placeholder]="placeholders[col]"
+							[customValidator]="validators">
+						</ng-template>
+						<ng-template #not_pkey>
+							<input type='text' [(ngModel)]="record[col]" name={{col}}
 							[minlength]="validators.getColMinLength(col)"
 							[maxlength]="validators.getColMaxLength(col)"
 							[required]="validators.isRequired(col)"
 							[pattern]="validators.getPattern(col)"
 							[placeholder]="placeholders[col]">
+						</ng-template>
+						
 					</td>
 				</tr>
 			</tbody>
-		</table>
+		</table>	
 	</div>
 	<div class="button-container">
 		<button mat-button routerLink="">Cancel</button>
