--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -10,18 +10,23 @@ div:has(> table){
 	white-space: nowrap;
 }
 
+
 td {
 	padding: 0px 10px 0px 10px;
 }
 
-input {
+
+input, select {
 	font-size: 1em;
 	width:8em;
 	text-align: center;
 }
 
-input.ng-invalid {
-	border-left: 5px solid red;
+.error-container {
+	padding-bottom: 10px;
+}
+.error-msg {
+	color: red;
 }
 
 
