Added similar functionality from insert to details component. Bit data columns are now select elements. Now I want to learn how I could stop repeating so much html

--- a/frontend/src/app/details/details.component.html
+++ b/frontend/src/app/details/details.component.html
@@ -1,23 +1,39 @@
 <h1>Details Page</h1>
 <form #detailsForm="ngForm">
+	<div class="error-container">
+		<ng-container *ngFor="let col of tableHeaders">
+			<div [hidden]="detailsForm.controls[col]?.valid || detailsForm.controls[col]?.untouched">
+				<ng-container *ngIf="detailsForm.controls[col]?.errors as errors">
+					<div class="error-msg">
+						{{col}}: {{validators.getErrorMsg(col)}}
+					</div>
+				</ng-container>
+			</div>
+		</ng-container>
+	</div>
 	<div>
 		<table>
 			<thead>
-				<th *ngFor="let header of tableHeaders">{{header}}</th>
+				<th *ngFor="let header of tableHeaders">
+					{{header}} <span class="error-msg">{{validators.isRequired(header) ? '*' : ''}}</span>
+				</th>
 			</thead>
 			<tbody>
 				<tr>
-					<td *ngFor="let col of tableHeaders">
-						<ng-container *ngIf="col === 'au_id'; then is_pkey else not_pkey"></ng-container>
-						<ng-template #is_pkey>
-							<input type="text" value={{record[col]}} disabled>
+					<td *ngFor="let col of tableHeaders" class="field-container">
+						<ng-template [ngIf]="validators.getColumnSchema(col)?.DATA_TYPE === 'bit'" [ngIfElse]="elseblock">
+							<select [ngModel]="record[col]" name={{col}} required>
+								<option value="true">True</option>
+								<option value="false">False</option>
+							</select>
 						</ng-template>
-						<ng-template #not_pkey>
-								<input type='text' [(ngModel)]="record[col]" name={{col}} 
-									[minlength]="validators.getColMinLength(col)" 
-									[maxlength]="validators.getColMaxLength(col)" 
-									[required]="validators.isRequired(col)"
-									[pattern]="validators.getPattern(col)">
+						<ng-template #elseblock>
+							<input type='text' [(ngModel)]="record[col]" name={{col}}
+							[minlength]="validators.getColMinLength(col)"
+							[maxlength]="validators.getColMaxLength(col)"
+							[required]="validators.isRequired(col)"
+							[pattern]="validators.getPattern(col)"
+							[disabled]="col === tablePKey">
 						</ng-template>
 					</td>
 				</tr>
