--- a/frontend/src/app/insert/insert.component.html
+++ b/frontend/src/app/insert/insert.component.html
@@ -21,21 +21,21 @@
 			<tbody>
 				<tr>
 					<td *ngFor="let col of tableHeaders" class="field-container">
-							<ng-container *ngIf="validators.getColumnSchema(col)?.DATA_TYPE === 'bit'; else elseblock">
-								<select [ngModel]="record[col]" name={{col}} required>
-									<option>False</option>
-									<option>True</option>
-								</select>
-							</ng-container>
-							<ng-template #elseblock>
-								<input type='text' [(ngModel)]="record[col]" name={{col}}
-								[minlength]="validators.getColMinLength(col)"
-								[maxlength]="validators.getColMaxLength(col)"
-								[required]="validators.isRequired(col)"
-								[pattern]="validators.getPattern(col)"
-								[placeholder]="placeholders[col]"
-								[duplicateKeyValidator]="col === tablePKey ? validators: null">
-							</ng-template>
+						<ng-container *ngIf="validators.getColumnSchema(col)?.DATA_TYPE === 'bit'; else elseblock">
+							<select [ngModel]="record[col]" name={{col}} required>
+								<option value="true">True</option>
+								<option value="false">False</option>
+							</select>
+						</ng-container>
+						<ng-template #elseblock>
+							<input type='text' [(ngModel)]="record[col]" name={{col}}
+							[minlength]="validators.getColMinLength(col)"
+							[maxlength]="validators.getColMaxLength(col)"
+							[required]="validators.isRequired(col)"
+							[pattern]="validators.getPattern(col)"
+							[placeholder]="placeholders[col]"
+							[duplicateKeyValidator]="col === tablePKey ? validators: null">
+						</ng-template>
 					</td>
 				</tr>
 			</tbody>
