--- a/frontend/src/app/details/details.component.html
+++ b/frontend/src/app/details/details.component.html
@@ -41,7 +41,7 @@
 		</table>
 	</div>
 	<div class="button-container">
-		<button mat-button routerLink="">Cancel</button>
+		<button mat-button routerLink="" type="button">Cancel</button>
 		<button mat-button (click)="onUpdate()" [disabled]="!detailsForm.valid">Update</button>
 		<button mat-button class="del-btn" (click)="onDelete()">Delete</button>
 	</div>
