--- a/frontend/src/app/insert/insert.component.html
+++ b/frontend/src/app/insert/insert.component.html
@@ -42,7 +42,7 @@
 		</table>	
 	</div>
 	<div class="button-container">
-		<button mat-button routerLink="">Cancel</button>
+		<button mat-button routerLink="" type="button">Cancel</button>
 		<button mat-button (click)="onInsert()" [disabled]="!insertForm.valid">Insert</button>
 	</div>
 </form>
