--- a/frontend/src/app/record/record.component.html
+++ b/frontend/src/app/record/record.component.html
@@ -1,9 +1,9 @@
-<h1>Insert new record</h1>
-<form #insertForm="ngForm">
+<h1>{{title}}</h1>
+<form #form="ngForm" (ngSubmit)="onSubmit()">
 	<div class="error-container">
 		<ng-container *ngFor="let col of tableHeaders">
-			<div [hidden]="insertForm.controls[col]?.valid || insertForm.controls[col]?.untouched">
-				<ng-container *ngIf="insertForm.controls[col]?.errors as errors">
+			<div [hidden]="form.controls[col]?.valid || form.controls[col]?.untouched">
+				<ng-container *ngIf="form.controls[col]?.errors as errors">
 					<div class="error-msg">
 						{{col}}: {{validators.getErrorMsg(col)}}
 					</div>
@@ -34,7 +34,8 @@
 							[required]="validators.isRequired(col)"
 							[pattern]="validators.getPattern(col)"
 							[placeholder]="placeholders[col]"
-							[duplicateKeyValidator]="col === tablePKey ? validators: null">
+							[duplicateKeyValidator]="col === tablePKey ? validators: null"
+							[disabled]="col === tablePKey && disablePKey">
 						</ng-template>
 					</td>
 				</tr>
@@ -43,6 +44,7 @@
 	</div>
 	<div class="button-container">
 		<button mat-button routerLink="" type="button">Cancel</button>
-		<button mat-button (click)="onInsert()" [disabled]="!insertForm.valid">Insert</button>
+		<button mat-button type="submit" [disabled]="!form.valid">{{submitText}}</button>
+		<button mat-button type="button" (click)="onDelete()" *ngIf="showDelete">Delete</button>
 	</div>
 </form>
