--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -38,6 +38,7 @@ input, select {
 
 button[mat-button], button[mat-raised-button]  {
 	margin-top: 15px;
+	margin-right: 0.8em;
 	font-size: 1.2em;
 }
 
