Defined behaviour for handling multiple primary keys. Also changed process for getting to record details. User now just has to click on the desired row. The hovered row is shaded and the cursor is a pointer.

--- a/frontend/src/app/record/record.component.scss
+++ b/frontend/src/app/record/record.component.scss
@@ -1,4 +1,19 @@
+button[mat-button]  {
+    margin-top: 15px;
+    margin-right: 0.8em;
+}
+
 button[mat-button].del-btn {
 	color: red;
 }
+
+.error-container {
+	padding-bottom: 10px;
+}
+
+.error-msg {
+	color: red;
+}
+
+
 
