--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -1,6 +1,6 @@
-<h1>Main Page</h1>
+<h1 class="banner">Database Editor</h1>
 @if (tableRows) {
-    <div id="tableContainer">
+    <div class="tableContainer">
         <div id="tableContainerHeader">
             <div>
                 <label for="tableSelect"><strong>Table:</strong></label>
