--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -20,7 +20,7 @@
                 </thead>
                 <tbody>
                 @for (row of tableRows; track $index) {
-                    <tr routerLink={{getRecordRoute(row)}}>
+                    <tr [routerLink]="tblservice.tableName + '/details'" [queryParams]="getQueryParams(row)">
                         @for (col of tableHeaders; track $index) {
                             <td title={{row[col]}}>{{row[col] ? row[col].length > 30 ? row[col].slice(0, 27) + "..." : row[col] : row[col]}}</td>
                         }
